Adjust grid <li> z-index to fix a problem where x badge is rendered behind when clicked.

--- a/app/jslib/jqtouch/themes/apple/theme.css
+++ b/app/jslib/jqtouch/themes/apple/theme.css
@@ -1042,12 +1042,14 @@ div.spinner div.bar12 {-webkit-transform:rotate(330deg) translate(0, -142%); -we
     color: white;
     font-weight: bold;
     -webkit-box-shadow: rgba(0,0,0,0.5) 1.5px 1.5px 4.5px;
+    z-index: 1;
 }
 
 #jqt > * ul.grid.editmode li::after {
     content: "";
     display: block; position: absolute;
     top: 0; bottom: 0; left: 0; right: 0;
+    z-index: 1;
 }
 
 @-webkit-keyframes shake {
